# kepler-wallet

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.ci/: general-jobs  release.yml  windows-release.yml
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc.rs  owner_rpc_s.rs
api/tests/: slate_versioning.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  lib.rs
controller/tests/: accounts.rs  check.rs  file.rs  invoice.rs  no_change.rs  payment_proofs.rs  repost.rs  restore.rs  self_send.rs  transaction.rs  ttl_cutoff.rs  updater_thread.rs
controller/tests/common/: mod.rs
doc/: tls-setup.md
doc/design/: wallet-arch.puml
doc/transaction/: basic-transaction-wf.puml
impls/: Cargo.toml
impls/src/: error.rs  lib.rs  seed.rs
impls/src/adapters/: file.rs  http.rs  keybase.rs  mod.rs  null.rs
impls/src/backends/: lmdb.rs  mod.rs
impls/src/client_utils/: client.rs
impls/src/lifecycle/: default.rs  seed.rs
impls/src/node_clients/: http.rs  mod.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: config.rs
impls/tests/: encryption.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  api_impl.rs  error.rs  internal.rs  lib.rs  slate.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_updater.rs  types.rs
libwallet/src/internal/: keys.rs  restore.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/slate_versions/: mod.rs  ser.rs  v0.rs  v1.rs  v2.rs  v3.rs
libwallet/tests/: libwallet.rs  slate_versioning.rs
src/: lib.rs
src/cmd/: mod.rs  wallet.rs  wallet_args.rs
tests/: cmd_line_basic.rs  owner_v2_sanity.rs  owner_v3.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/common/: mod.rs
util/: Cargo.toml
util/src/: lib.rs
