[package]
name = "kepler_wallet"
version = "3.1.0-beta.1"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
readme = "README.md"
exclude = ["**/*.kepler", "**/*.kepler2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "kepler-wallet"
path = "src/bin/kepler-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.31", features = ["yaml"] }
rpassword = "2.0.0"
ctrlc = { version = "3.1", features = ["termination"] }
failure = "0.1"
failure_derive = "0.1"
prettytable-rs = "0.7"
log = "0.4"
linefeed = "0.5"
semver = "0.9"

kepler_wallet_api = { path = "./api", version = "3.1.0-beta.1" }
kepler_wallet_impls = { path = "./impls", version = "3.1.0-beta.1" }
kepler_wallet_libwallet = { path = "./libwallet", version = "3.1.0-beta.1" }
kepler_wallet_controller = { path = "./controller", version = "3.1.0-beta.1" }
kepler_wallet_config = { path = "./config", version = "3.1.0-beta.1" }

kepler_wallet_util = { path = "./util", version = "3.1.0-beta.1" }

[build-dependencies]
built = "0.3"

[dev-dependencies]
url = "1.7.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc = "0.5.1"
