[package]
name = "kepler_wallet_api"
version = "1.1.0"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Kepler Wallet API"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
exclude = ["**/*.kepler", "**/*.kepler2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde_json = "1"
easy-jsonrpc = "0.5.1"
chrono = { version = "0.4.4", features = ["serde"] }

kepler_wallet_libwallet = { path = "../libwallet", version = "1.1.0" }
kepler_wallet_config = { path = "../config", version = "1.1.0" }
kepler_wallet_impls = { path = "../impls", version = "1.1.0" }

kepler_wallet_util = { path = "../util", version = "1.1.0" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
