[package]
name = "kepler_wallet_api"
version = "2.1.0-beta.2"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Kepler Wallet API"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
exclude = ["**/*.kepler", "**/*.kepler2"]
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
log = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1"
rand = "0.5"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.3"
chrono = { version = "0.4.4", features = ["serde"] }
ring = "0.13"
base64 = "0.9"

kepler_wallet_libwallet = { path = "../libwallet", version = "2.1.0-beta.2" }
kepler_wallet_config = { path = "../config", version = "2.1.0-beta.2" }
kepler_wallet_impls = { path = "../impls", version = "2.1.0-beta.2" }
kepler_wallet_util = { path = "../util", version = "2.1.0-beta.2" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.0.7"
