[package]
name = "kepler_wallet_controller"
version = " 3.0.0-alpha.1"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Controllers for kepler wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
exclude = ["**/*.kepler", "**/*.kepler2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
rand = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.7"
ring = "0.13"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }
easy-jsonrpc-mw = "0.5.3"
lazy_static = "1"

kepler_wallet_util = { path = "../util", version = " 3.0.0-alpha.1" }

kepler_wallet_api = { path = "../api", version = " 3.0.0-alpha.1" }
kepler_wallet_impls = { path = "../impls", version = " 3.0.0-alpha.1" }
kepler_wallet_libwallet = { path = "../libwallet", version = " 3.0.0-alpha.1" }
kepler_wallet_config = { path = "../config", version = " 3.0.0-alpha.1" }
