[package]
name = "kepler_wallet_util"
version = "2.1.0-beta.1"
authors = ["Kepler Developers <keplernetwork@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export kepler crates"
license = "Apache-2.0"
repository = "https://github.com/keplernetwork/kepler-wallet"
keywords = [ "crypto", "kepler", "keplernetwork" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
# kepler_core = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_keychain = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_chain = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_util = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_api = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }
# kepler_store = { git = "https://github.com/keplernetwork/kepler", tag = "1.1.0" }

# For beta release
kepler_core = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6" }
kepler_keychain = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6"  }
kepler_chain = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6"  }
kepler_util = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6"  }
kepler_api = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6"  }
kepler_store = { git = "https://github.com/keplernetwork/kepler", rev = "adb43a1d0498cf7d34413941eb43a65624b111e6"  }

# For bleeding edge
# kepler_core = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }
# kepler_keychain = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }
# kepler_chain = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }
# kepler_util = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }
# kepler_api = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }
# kepler_store = { git = "https://github.com/sulaweisi/kepler", branch = "kepler-milestone/2.1.0-beta.1" }

# For local testing
#kepler_core = { path = "../../kepler/core", version= "2.0.1-beta.1"}
#kepler_keychain = { path = "../../kepler/keychain", version= "2.0.1-beta.1"}
#kepler_chain = { path = "../../kepler/chain", version= "2.0.1-beta.1"}
#kepler_util = { path = "../../kepler/util", version= "2.0.1-beta.1"}
#kepler_api = { path = "../../kepler/api", version= "2.0.1-beta.1"}
#kepler_store = { path = "../../kepler/store", version= "2.0.1-beta.1"}

[dev-dependencies]
pretty_assertions = "0.5.1"
